# python-zstandard

./: .clang-format  .gitignore  .hgignore  .hgtags  .readthedocs.yaml  .travis.yml  Cargo.toml  Justfile  MANIFEST.in  NEWS.rst  README.rst  SECURITY.md  appveyor.yml  bench.py  make_cffi.py  pyproject.toml  setup.py  setup_zstd.py  tox.ini  zstd.c  zstd_cffi.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: anaconda.yml  external-zstd.yml  pypy.yml  ruff.yml  sdist.yml  sphinx.yml  test.yml  typing.yml  wheel.yml  zizmor.yml
c-ext/: _pyzstd_atomics.h  backend_c.c  blocks_output_buffer.h  bufferutil.c  compressionchunker.c  compressiondict.c  compressionparams.c  compressionreader.c  compressionwriter.c  compressobj.c  compressor.c  compressoriterator.c  constants.c  decompressionreader.c  decompressionwriter.c  decompressobj.c  decompressor.c  decompressoriterator.c  dictparams.c  frameparams.c  python-zstandard.h  pythoncapi_compat.h
ci/: appveyor-bootstrap.ps1  appveyor-test.bat  azure-pipelines-anaconda-linux-template.yml  azure-pipelines-anaconda-windows-template.yml  azure-pipelines-template.yml  azure-pipelines.yml  build-manylinux-wheel.sh  constraints.txt  copy-conda-package.py  download-artifacts.py  download-pipeline-artifacts.py  download-travis.py  download_appveyor.py  requirements.313.txt  requirements.docs.in  requirements.docs.txt  requirements.freethreading.in  requirements.freethreading.txt  requirements.in  requirements.macoswheels.in  requirements.macoswheels.txt  requirements.py36.txt  requirements.pypy.in  requirements.pypy.txt  requirements.txt  run-with-env.cmd  travis-build.sh  travis-install.sh
ci/conda/: build.sh  meta.yaml
debian/: changelog  control  rules
debian/source/: options
docs/: Makefile  api_usage.rst  buffer.rst  compression_parameters.rst  compressor.rst  concepts.rst  conf.py  contributing.rst  decompressor.rst  dictionaries.rst  index.rst  installing.rst  misc_apis.rst  missing_features.rst  multithreaded.rst  news.rst  one_shot_api.rst  projectinfo.rst
rust-ext/src/: buffers.rs  compression_chunker.rs  compression_dict.rs  compression_parameters.rs  compression_reader.rs  compression_writer.rs  compressionobj.rs  compressor.rs  compressor_iterator.rs  compressor_multi.rs  constants.rs  decompression_reader.rs  decompression_writer.rs  decompressionobj.rs  decompressor.rs  decompressor_iterator.rs  decompressor_multi.rs  exceptions.rs  frame_parameters.rs  lib.rs  stream.rs  zstd_safe.rs
tests/: common.py  conftest.py  test_buffer_util.py  test_cli.py  test_compress.py  test_compressor.py  test_compressor_chunker.py  test_compressor_compress.py  test_compressor_compressobj.py  test_compressor_copy_stream.py  test_compressor_fuzzing.py  test_compressor_multi_compress_to_buffer.py  test_compressor_read_to_iter.py  test_compressor_stream_reader.py  test_compressor_stream_writer.py  test_compressor_threadsafe.py  test_compresswriter.py  test_data_structures.py  test_data_structures_fuzzing.py  test_decompressor.py  test_decompressor_content_dict_chain.py  test_decompressor_copy_stream.py  test_decompressor_decompress.py  test_decompressor_decompressobj.py  test_decompressor_fuzzing.py  test_decompressor_multi_decompress_to_buffer.py  test_decompressor_read_to_iter.py  test_decompressor_stream_reader.py  test_decompressor_stream_writer.py  test_decompresswriter.py  test_estimate_sizes.py  test_module_attributes.py  test_open.py  test_roundtrip.py  test_roundtrip_fuzzing.py  test_train_dictionary.py  test_utility.py
zstandard/: __init__.py  __init__.pyi  __main__.py  backend_cffi.py  cffi.py  cli.py
zstd/: zstd.c  zstd.h  zstdlib.c
zstd/common/: zstd_errors.h
zstd/dictBuilder/: fastcover.c
