[package]
name = "python-zstandard"
version = "0.21.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Python bindings to zstandard compression library"
readme = "README.rst"

[lib]
name = "backend_rust"
crate-type = ["cdylib"]
path = "rust-ext/src/lib.rs"

[dependencies]
libc = "0.2.141"
num_cpus = "1.15.0"
rayon = "1.7.0"

[dependencies.zstd-safe]
version = "6.0.5+zstd.1.5.4"
features = ["experimental", "legacy", "zstdmt"]

[dependencies.zstd-sys]
version = "2.0.8+zstd.1.5.5"
features = ["experimental", "legacy", "zstdmt"]

[dependencies.pyo3]
version = "0.18.3"
features = ["extension-module"]
