[package]
name = "python-zstandard"
version = "0.23.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Python bindings to zstandard compression library"
readme = "README.rst"

[lib]
name = "backend_rust"
crate-type = ["cdylib"]
path = "rust-ext/src/lib.rs"

[dependencies]
libc = "0.2.155"
num_cpus = "1.16.0"
rayon = "1.10.0"

[dependencies.zstd-safe]
version = "7.1.0"
features = ["experimental", "legacy", "zstdmt"]

[dependencies.zstd-sys]
version = "2.0.10+zstd.1.5.6"
features = ["experimental", "legacy", "zstdmt"]

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module"]
