[project]
name = "zstandard"
dynamic = ["version"]
description = "Zstandard bindings for Python"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "Gregory Szorc", email = "gregory.szorc@gmail.com" },
]
license = { text = "BSD" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 1 - Unstable",
    "Programming Language :: Python :: Free Threading",

]
keywords = ["zstandard", "zstd", "compression"]
dependencies = []

[project.optional-dependencies]
cffi = [
    "cffi~=1.17; platform_python_implementation != 'PyPy' and python_version < '3.14'",
    "cffi>=2.0.0b; platform_python_implementation != 'PyPy' and python_version >= '3.14'",
]

[project.urls]
Homepage = "https://github.com/indygreg/python-zstandard"
Documentation = "https://python-zstandard.readthedocs.io/en/latest/"

[build-system]
requires = [
    "cffi~=1.17; platform_python_implementation != 'PyPy' and python_version < '3.14'",
    "cffi>=2.0.0b; platform_python_implementation != 'PyPy' and python_version >= '3.14'",
    "packaging",
    "setuptools",
]
# Need to use legacy backend because setup_zstd.py breaks build isolation.
build-backend = "setuptools.build_meta:__legacy__"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.cibuildwheel]
enable = ["cpython-prerelease"]

# This is needed to suppress generation of license-file, which isn't
# compatible with metadata version 2.1, which our pinned setuptools
# version currently uses.
# TODO delete this after we adopt modern setuptools.
[tool.setuptools]
license-files = []
