[project]
name = "zstandard"
dynamic = ["version"]
description = "Zstandard bindings for Python"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "Gregory Szorc", email = "gregory.szorc@gmail.com" },
]
license = "BSD-3-Clause"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["zstandard", "zstd", "compression"]
dependencies = []

[project.optional-dependencies]
cffi = [
    'cffi>=1.17 ; python_version >= "3.13" and platform_python_implementation != "PyPy"',
]

[project.urls]
Homepage = "https://github.com/indygreg/python-zstandard"
Documentation = "https://python-zstandard.readthedocs.io/en/latest/"

[build-system]
requires = [
    "cffi>=1.17.0 ; platform_python_implementation != 'PyPy'",
    "packaging",
    "setuptools>=77.0.0",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "cffi>=1.17.0 ; platform_python_implementation != 'PyPy'",
    "hypothesis==6.111.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.cibuildwheel]
enable = ["cpython-prerelease"]
build-frontend = "build[uv]"

# Turn compiler warnings into errors.
environment = "ZSTD_WARNINGS_AS_ERRORS=1"

test-command = [
    "pytest -v --numprocesses=auto",
    "PYTHON_ZSTANDARD_IMPORT_POLICY=cffi pytest -v --numprocesses=auto",
]
test-groups = ["dev"]
test-sources = ["tests"]

[tool.cibuildwheel.linux]
before-all = "if [ -x /usr/bin/yum ]; then yum install -y libffi-devel; fi"

[tool.cibuildwheel.windows]
# Environment variable syntax is different on Windows.
test-command = [
    "pytest -v --numprocesses=auto",
    "set PYTHON_ZSTANDARD_IMPORT_POLICY=cffi",
    "pytest -v --numprocesses=auto",
]
